# QuantLibAAD

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  runForgeBenchmark.sh
.github/workflows/: ci.yaml  ql-benchmarks.yaml  ql-type-overhead.yaml
Examples/AdjointAmericanEquityOption/: AdjointAmericanEquityOptionXAD.cpp
Examples/AdjointBermudanSwaption/: AdjointBermudanSwaptionXAD.cpp
Examples/AdjointCDS/: AdjointCdsXAD.cpp
Examples/AdjointEuropeanEquityOption/: AdjointEuropeanEquityOptionXAD.cpp
Examples/AdjointHestonModel/: AdjointHestonModelXAD.cpp
Examples/AdjointMulticurveBootstrapping/: AdjointMulticurveBootstrappingXAD.cpp
Examples/AdjointReplication/: AdjointReplicationXAD.cpp
Examples/AdjointSwap/: AdjointSwapXAD.cpp
docs/: investigation.md
presets/: CMakeUserPresets.json  README.md
ql/: CMakeLists.txt  qlaad.hpp
test-suite/: CMakeLists.txt  PlatformInfo.hpp  americanoption_xad.cpp  barrieroption_xad.cpp  batesmodel_xad.cpp  benchmark_aad.cpp  benchmark_aad_local_script.cpp  benchmark_common.hpp  benchmark_fd.cpp  benchmark_pricing.hpp  benchmark_type_overhead.cpp  bermudanswaption_xad.cpp  bonds_xad.cpp  creditdefaultswap_xad.cpp  europeanoption_xad.cpp  forwardrateagreement_xad.cpp  hestonmodel_xad.cpp  null_xad.cpp  quantlibtestsuite_xad.cpp  swap_xad.cpp  swaption_jit_pipeline_xad.cpp  utilities_xad.hpp
